bin_PROGRAMS = nonny
nonny_SOURCES = application.cpp button.cpp collection_index.cpp control.cpp \
  control_container.cpp game.cpp info_pane.cpp input_handler.cpp main.cpp \
  menu.cpp preview.cpp puzzle.cpp puzzle_collection.cpp renderer.cpp \
  scrollbar.cpp static_text.cpp
AM_CPPFLAGS = -DDATADIR=\"$(pkgdatadir)\"
AM_LDFLAGS = -lboost_system -lboost_filesystem
